--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -77,8 +77,6 @@
 	#sb_container,
 	#notes_container,
 	#quotes_container {
-		width: fit-content;
-		height: fit-content;
 		place-self: center;
 	}
 
