--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -506,7 +506,7 @@
 		visibility: visible;
 		align-items: center;
 		padding: 0;
-		width: 100%;
+		width: fit-content;
 		border-radius: 10px;
 		box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
